--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "url": "https://github.com/kazuhikoarase/gulp-html2ts/issues"
   },
   "license": "MIT",
+  "dependencies": {
+    "plugin-error": "^1.0.1",
+    "through2": "^2.0.3",
+    "path": "^0.12.7"
+  },
   "devDependencies": {
   }
 }
