--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gulp-html2ts",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "license": "MIT",
   "author": "Kazuhiko Arase",
   "main": "index.js",
   "repository": {
@@ -10,12 +11,17 @@
   "bugs": {
     "url": "https://github.com/kazuhikoarase/gulp-html2ts/issues"
   },
-  "license": "MIT",
   "dependencies": {
     "plugin-error": "^1.0.1",
     "through2": "^2.0.3",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "mocha": "^5.1.1",
+    "should": "^13.2.1",
+    "vinyl": "^2.1.0"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
