--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-html2ts",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "MIT",
   "author": "Kazuhiko Arase",
   "main": "index.js",
@@ -11,6 +11,11 @@
   "bugs": {
     "url": "https://github.com/kazuhikoarase/gulp-html2ts/issues"
   },
+  "keywords": [
+    "gulp",
+    "html",
+    "typescript"
+  ],
   "dependencies": {
     "plugin-error": "^1.0.1",
     "through2": "^2.0.3",
